--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: rent_tools_development
+  database: rent_tools_app_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rent_tools_test
+  database: rent_tools_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: rent_tools_production
-  username: rent_tools
-  password: <%= ENV['RENT_TOOLS_DATABASE_PASSWORD'] %>
+  database: rent_tools_app_production
+  username: rent_tools_app
+  password: <%= ENV['rent_tools_app_DATABASE_PASSWORD'] %>
